--- a/src/app/java-script/js/js.component.html
+++ b/src/app/java-script/js/js.component.html
@@ -5,24 +5,24 @@
 
     <div class="list">
         <!-- Fundamentals -->
-        <button class="styled">Control Flow </button>
-        <button class="styled">Functions</button>
-        <button class="styled" routerLink="array">Array Methods</button>
-        <button class="styled">Error Handling</button>
+        <button class="styled" routerLink="controleflow">Control Flow </button>
+        <button class="styled" routerLink="functions">Functions</button>
+        <button class="styled" routerLink="array-methods">Array Methods</button>
+        <button class="styled" routerLink="errorhandling">Error Handling</button>
         <!-- Intermediate -->
-        <button class="styled" routerLink="closures">Closures</button>
-        <button class="styled" routerLink="this-keyword">this & Execution Context</button>
+        <button class="styled" routerLink="clousers">Closures</button>
+        <button class="styled" routerLink="context">this & Execution Context</button>
         <button class="styled" routerLink="prototypes">Prototypes & Inheritance</button>
-        <button class="styled" routerLink="async-programming">Async Programming</button>
-        <button class="styled" routerLink="promises-async-await">Promises & Async/Await</button>
-        <button class="styled" routerLink="es6-features">ES6+ Features</button>
+        <button class="styled" routerLink="async">Async Programming</button>
+        <button class="styled" routerLink="promises">Promises & Async/Await</button>
+        <button class="styled" routerLink="e6">ES6+ Features</button>
         <!-- Advanced -->
-        <button class="styled" routerLink="design-patterns">Design Patterns</button>
-        <button class="styled" routerLink="memory-management">Memory Management</button>
-        <button class="styled" routerLink="performance">Performance Optimization</button>
+        <button class="styled" routerLink="patterns">Design Patterns</button>
+        <button class="styled" routerLink="memory">Memory Management</button>
+        <button class="styled" routerLink="optimization">Performance Optimization</button>
         <button class="styled" routerLink="modules">Module Systems</button>
-        <button class="styled" routerLink="dom">DOM & Browser APIs</button>
-        <button class="styled" routerLink="web-apis">Web APIs</button>
+        <button class="styled" routerLink="browser-api">DOM & Browser APIs</button>
+        <button class="styled" routerLink="web-api">Web APIs</button>
     </div>
 
     <div class="sub-components-wraper">
