--- a/src/app/java-script/js/js.component.scss
+++ b/src/app/java-script/js/js.component.scss
@@ -72,6 +72,8 @@ p,h1,h2,h3,h4,h5,h6{
     .sub-components-wraper{
         height: 85%;
         width: 100%;
-        padding:0px 20px 0px 20px;
+        overflow-y: auto;
+        display: flex;
+        justify-content: space-around;        
     }
 }
