--- a/src/app/type-script/ts/ts.component.scss
+++ b/src/app/type-script/ts/ts.component.scss
@@ -72,6 +72,7 @@ p,h1,h2,h3,h4,h5,h6{
     .sub-components-wraper{
         height: 85%;
         width: 100%;
-        padding:0px 20px 0px 20px;
+        padding-left:10px ;
+        padding-right: 10px;
     }
 }
