--- a/src/app/java-script/control-flow/control-flow.component.scss
+++ b/src/app/java-script/control-flow/control-flow.component.scss
@@ -1,16 +1,27 @@
-.wraper{
-    height: 100%;
+p,h1,h2,h3,h4,h5,h6{
+  margin: 0px;
+  padding: 0px;
+}
+
+.oveall-wraper{
+  padding: 20px 20px 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #FFF;
+  // header
+  .wraper{
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: start;
+    position: relative;
+
   .header{
     width: 100%;
-    height: 120px;
+    height: 100px;
     display: flex;
     justify-content: space-evenly;
     gap: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
     p{
         width: 33%;
         border:1px solid rgba(128, 128, 128, 0.468);
@@ -24,3 +35,93 @@
     }
   }
 }
+
+// cards
+.examples{
+  width: 100%;
+  height: auto;
+  .control-flow-statement{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
+    .card{
+      width: 400px;
+      padding: 10px;
+      border: 1px solid rgba(128, 128, 128, 0.468);
+      border-radius: 10px;
+      h3{
+        text-align: center;
+      }
+      .if{
+        background-color: rgba(0, 255, 21, 0.171);
+        border: 1px solid rgba(128, 128, 128, 0.468);
+        border-radius: 10px;
+        padding: 20px 20px 20px 40px;
+       }
+       .switch{
+        background-color: rgba(0, 255, 21, 0.171);
+        border: 1px solid rgba(128, 128, 128, 0.468);
+        border-radius: 10px;
+        padding: 20px 20px 20px 40px;
+       }
+       .try{
+        background-color: rgba(0, 255, 21, 0.171);
+        border: 1px solid rgba(128, 128, 128, 0.468);
+        border-radius: 10px;
+        padding: 20px 20px 20px 40px;
+       }
+
+       pre,code {
+        display: block;
+        background-color: #f4f4f4;
+        padding: 5px;
+        border-radius: 6px;
+        font-family: 'Fira Code', 'Courier New', Courier, monospace;
+        font-size: 14px;
+        line-height: 1.7;
+        overflow-x: auto;
+        white-space: pre-wrap; 
+      }
+      
+       p {
+        font-size: 14px;
+        margin-top: 8px;
+        color: #2a2a2a;
+      }
+    }
+  }
+  .control-flow-statement .card:nth-child(1) {
+     width: 100%;
+     .for{
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      padding: 10px;
+      .loop{
+        width: 30%; 
+        background-color: rgba(0, 255, 21, 0.171);
+        border: 1px solid rgba(128, 128, 128, 0.468);
+        border-radius: 10px;
+        padding: 20px 20px 20px 40px;
+        h4{
+          text-align: center;
+        }
+      }
+     }
+  }
+}
+}
+
+.swap {
+  cursor: pointer;
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  z-index: 10;
+  background-color: #FFF;
+}
+
+
