--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+/* Scrollbar Track */
+::-webkit-scrollbar {
+    width: 5px; 
+    height: 5px;
+ }
+  
+  /* Scrollbar Thumb */
+  ::-webkit-scrollbar-thumb {
+    background-color:  rgba(0, 255, 21, 0.171); 
+    border-radius: 5px;
+  }
+  
+  /* Scrollbar Thumb on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color:  rgba(0, 255, 21, 0.536);
+  }
+  
+  /* Scrollbar Track */
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+  
