--- a/src/app/java-script/js/js.component.html
+++ b/src/app/java-script/js/js.component.html
@@ -1,7 +1,7 @@
 <div class="wraper">
-    <div class="title">
+    <!-- <div class="title">
         <h1>java-script</h1>
-    </div>
+    </div> -->
 
     <div class="list">
         <!-- Fundamentals -->
