--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,7 +14,7 @@ p,h1,h2,h3,h4,h5,h6{
         text-align: center;
     }
     .card-wraper{ 
-        height: 5%;
+        // height: 5%;
         width: 100%;
         display: flex;
         justify-content: center; 
@@ -42,7 +42,7 @@ p,h1,h2,h3,h4,h5,h6{
 .modules{
     height: 95%;
     width: 100%;
-    padding-top: 20px;
+    padding-top: 10px;
     
 }    
 }
