--- a/src/app/java-script/array-methods/array-methods.component.scss
+++ b/src/app/java-script/array-methods/array-methods.component.scss
@@ -14,7 +14,6 @@ p, h1, h2, h3, h4, h5, h6 {
        
    // header
   .wrapper {
-    // width: 100%;
     display: flex;
     justify-content: start;
     position: relative;
@@ -173,8 +172,9 @@ p, h1, h2, h3, h4, h5, h6 {
         }
         
         .problem-list {
-          display: grid;
-          grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+          display: flex;
+          justify-content: start;
+          flex-wrap: wrap;
           gap: 20px;
         }
         
