--- a/src/app/aws/aws/aws.component.scss
+++ b/src/app/aws/aws/aws.component.scss
@@ -6,13 +6,13 @@ p,h1,h2,h3,h4,h5,h6{
 .wraper{
     height: 100%;
     width: 100%;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-self: center;
+    // display:flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-self: center;
    
     .list{
-        height: 20%;
+        height: 7%;
         width: 100%; 
         display:flex;
         justify-content: center;
@@ -66,8 +66,6 @@ p,h1,h2,h3,h4,h5,h6{
     .sub-components-wraper{
         height: 85%;
         width: 100%;
-        overflow-y: auto;
-        // display: flex;
-        // justify-content: space-around;        
+        overflow-y: auto;        
     }
 }
