--- a/src/app/java-script/control-flow/control-flow.component.scss
+++ b/src/app/java-script/control-flow/control-flow.component.scss
@@ -172,8 +172,9 @@ p, h1, h2, h3, h4, h5, h6 {
       }
       
       .problem-list {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        display: flex;
+        justify-content: flex-start;
+        flex-wrap: wrap;
         gap: 20px;
       }
       
